<resources>
    <string name="app_name">Student Info</string>
    <string name="first_name_hint">Wpisz imię</string>
    <string name="last_name_hint">Wpisz nazwisko</string>
    <string name="grades_count_hint">5-15</string>
    <string name="button_grades">Oceny</string>
    <string name="error_empty">Pole nie może być puste!</string>
    <string name="error_invalid_count">Wymagane od 5 do 15 ocen!</string>
    <string name="label_first_name">Imię</string>
    <string name="label_last_name">Nazwisko</string>
    <string name="label_grades_count">Liczba ocen</string>
    <string name="grades">Oceny</string>
    <string name="calculate_average">Oblicz średnią</string>
    <string name="button_super">Zdajesz</string>
    <string name="button_failed">Nie zdajesz</string>

    <string-array name="course_names">
        <item>Matematyka</item>
        <item>Fizyka</item>
        <item>Programowanie</item>
        <item>Algorytmy</item>
        <item>Bazy danych</item>
        <item>Sieci komputerowe</item>
        <item>Grafika komputerowa</item>
        <item>Systemy operacyjne</item>
        <item>Inżynieria oprogramowania</item>
        <item>Sztuczna inteligencja</item>
        <item>Architektura komputerów</item>
        <item>Języki formalne</item>
        <item>Kryptografia</item>
        <item>Aplikacje mobilne</item>
        <item>Zarządzanie projektami</item>
    </string-array>
</resources>